force-app/main/default/objects/Project_Assigned_Resource__c/Project_Assigned_Resource__c.object-meta.xml
<CustomObject>
    <label>Project Assigned Resource</label>
    <nameField>
        <label>Project Assigned Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Assigned Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>