force-app/main/default/objects/Project_Assigned_Resource__c/fields/Assigned_Amount__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Amount__c</fullName>
    <label>Assigned Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>