force-app/main/default/objects/Project_Assigned_Resource__c/fields/Assigned_Hour__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Hour__c</fullName>
    <label>Assigned Hour</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>