force-app/main/default/objects/Project_Assigned_Resource__c/fields/Cumulated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Cumulated_Cost__c</fullName>
    <label>Cumulated Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>