force-app/main/default/objects/Project_Assigned_Resource__c/fields/Current_Hours__c.field-meta.xml
<CustomField>
    <fullName>Current_Hours__c</fullName>
    <label>Current Hours</label>
    <summarizedField>Resource_Task__c.Registered_Hours__c</summarizedField>
    <summaryForeignKey>Resource_Task__c.Project_Assigned_Resource__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>