force-app/main/default/objects/Project_Assigned_Resource__c/fields/Resource_Rate__c.field-meta.xml
<CustomField>
    <fullName>Resource_Rate__c</fullName>
    <label>Resource Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>