force-app/main/default/objects/Project_Assigned_Resource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Project_Line_Item__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Line_Item__c</field>
        <operation>equals</operation>
        <value>HorasDev</value>
    </filters>
    <label>All</label>
</ListView>