force-app/main/default/objects/Project_Assigned_Resource__c/listViews/myProjectAssignedResources.listView-meta.xml
<ListView>
    <fullName>myProjectAssignedResources</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>myProjectAssignedResources</label>
</ListView>